--- a/index.html
+++ b/index.html
@@ -4,9 +4,358 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khusnul Khuluq</title>
+    <title>Profile | Khusnul Khuluq</title>
+
+    <link rel="shortcut icon" href="img/fav.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">    
+
+    <link rel="stylesheet" href="style/aos.css">
+    <link rel="stylesheet" href="style/all.min.css">
+    <link rel="stylesheet" href="style/bootstrap.min.css">
+    <link rel="stylesheet" href="style/animate.min.css">
+    <link rel="stylesheet" href="style/fontawesome.min.css">
+    <link rel="stylesheet" href="style/slick.css">
+    <link rel="stylesheet" href="style/slick-theme.css">
+    <link rel="stylesheet" href="style/style.css">
+
+    <script src="script/jquery-3.6.0.min.js"></script>
+    <script src="script/aos.js"></script>
+    <script src="script/all.min.js"></script>
+    <script src="script/bootstrap.min.js"></script>
+    <script src="script/fontawesome.min.js"></script>
+    <script src="script/fontawesome.min.js"></script>
+    <script src="script/slick.min.js"></script>
+    <script src="script/vue.min.js"></script>
 </head>
-<body>
-    <h1>Hello Ninno</h1>
+<body class="dark">
+
+    <div style="height: 80vh !important">
+        <div class="container-fluid px-0" id="parallax-home">
+            <img src="img/parralax-home.jpg" class="parallax-home object-fit" alt="Home">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div data-aos="fade-right" data-aos-delay="100" class="absolute-profile">
+                            <div class="avatar-profile">
+                                <img src="img/profile.png" class="object-fit" alt="Profile">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-10">
+                        <div class="absolute-profile pt-2">
+                            <div data-aos="fade-right">
+                                <h3 class="nunito mt-2 mb-md-4 mb-1 font-weight-bold">Mohammad Khusnul Khuluq</h3>
+                            </div>
+                            <div data-aos="fade-right">
+                                <p class="nunito mb-0">Full Stack Developer</p>
+                            </div>
+                        </div>
+                        <div class="absolute-profile text-right w-100 py-2 mt-md-0 mt-5">
+                            <button data-aos="fade-left" class="btn btn-dark px-3 py-2">
+                                <i class="fab fa-facebook"></i>
+                            </button>
+                            <button data-aos="fade-left" data-aos-delay="100" class="btn btn-dark px-3 py-2">
+                                <i class="fab fa-instagram"></i>
+                            </button>
+                            <button data-aos="fade-left" data-aos-delay="200" class="btn btn-dark px-3 py-2">
+                                <i class="fab fa-dribbble"></i>
+                            </button>
+                            <button data-aos="fade-left" data-aos-delay="300" class="btn btn-dark px-3 py-2">
+                                <i class="fab fa-linkedin"></i>
+                            </button>
+                            <button data-aos="fade-left" data-aos-delay="400" class="btn btn-dark px-3 py-2">
+                                <i class="fab fa-github"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Introduce -->
+    <div class="container-fluid mt-md-0 mt-4 pt-md-0 mb-5 pb-5 position-relative" id="introduce">
+        <div data-aos="zoom-in-right" class="container mt-md-0 mt-5 pt-md-0 position-relative">
+            <img src="img/gradient.png" id="gradient" width="100px" alt="Gradient">
+            <div data-aos="zoom-in" class="position-relative container card-dark mt-4 py-4">
+                <div class="row">
+                    <div class="col-md-3 my-2 px-4 position-relative">
+                        <div data-aos="fade-right" class="image">
+                            <img src="img/introduce.png" class="object-fit" alt="Introduce">
+                        </div>
+                    </div>
+                    <div class="col-md-8 py-md-4 py-0 px-4">
+                        <h3 data-aos="fade-left" class="nunito mb-4 mt-md-0 mt-4 font-weight-bold">Introduction</h3>
+                        <div data-aos="fade-left" class="mr-md-5 mr-3">
+                            <p class="mb-0">My name is Khuluq, but people call me ‘Ninno’, I’am born in Pasuruan ,30 March 2020 and I’am third year software engineer in 01 Purwosari indutrial school, I’am fullstack developer, I can make web and app in any language programming, I’m love python and kotlin, It’s simplicity of programming.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Experiences -->
+    <div class="container-fluid px-0 pb-5 overflow-hidden position-relative" id="experience">
+        <div class="overlay-gradient"></div>
+        <div class="overlay-gradient-to-opacity"></div>
+        <div class="title py-5 text-center position-relative">
+            <h4 data-aos="fade-down">Experiences</h4>
+        </div>
+        <div class="container py-3 position-relative">
+            <div class="row">
+                <div class="col-md-3 mb-2">
+                    <div data-aos="fade-right" class="w-100 bg-glass p-4">
+                        <div>
+                            <p class="mb-0 nunito">Year</p>
+                        </div>
+                        <h2 class="mb-0 font-weight-bold nunito">2019</h2>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div data-aos="fade-left" class="w-100 bg-glass p-4">
+                        <ul class="nunito" style="list-style-type: decimal;">
+                            <li>Leader team in any competition</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container py-3 position-relative">
+            <div class="row">
+                <div class="col-md-3 mb-2">
+                    <div data-aos="fade-right" class="w-100 bg-glass p-4">
+                        <div>
+                            <p class="mb-0 nunito">Year</p>
+                        </div>
+                        <h2 class="mb-0 font-weight-bold nunito">2020</h2>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div data-aos="fade-left" class="w-100 bg-glass p-4">
+                        <ul class="nunito" style="list-style-type: decimal;">
+                            <li>Leader team in any competition</li>
+                            <li>Vice Leader in SMKNUSA Programming Association</li>
+                            <li>SMK Coding Kominfo Academy</li>
+                            <li>Internship in PT. Inagata Persada</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container py-3 position-relative">
+            <div class="row">
+                <div class="col-md-3 mb-2">
+                    <div data-aos="fade-right" class="w-100 bg-glass p-4">
+                        <div>
+                            <p class="mb-0 nunito">Year</p>
+                        </div>
+                        <h2 class="mb-0 font-weight-bold nunito">2021</h2>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div data-aos="fade-left" class="w-100 bg-glass p-4">
+                        <ul class="nunito" style="list-style-type: decimal;">
+                            <li>Freelance in BePlay, Brunei Darussalam</li>
+                            <li>Leader team in any competition</li>
+                            <li>Leader in SMKNUSA Programming Association</li>
+                            <li>Leader in SMKNUSA website development</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="title py-5 text-center position-relative">
+            <h4 data-aos="fade-down">Education</h4>
+        </div>
+        <div class="container py-3 pb-5 position-relative">
+            <div class="col-md-10 offset-md-1">
+                <div class="row">
+                    <div class="col-md-4 mb-2">
+                        <div data-aos="fade-right" class="w-100 bg-glass p-4">
+                            <div>
+                                <p class="mb-0 nunito">Year</p>
+                            </div>
+                            <h2 class="mb-0 font-weight-bold nunito">2009</h2>
+                            <div class="mt-2">
+                                <img src="img/kemendikbud.png" class="mb-3" width="60px" alt="mts">
+                                <h5 class="mb-0 nunito">01 Purwosari Elementary School</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-2">
+                        <div data-aos="fade-down" class="w-100 bg-glass p-4">
+                            <div>
+                                <p class="mb-0 nunito">Year</p>
+                            </div>
+                            <h2 class="mb-0 font-weight-bold nunito">2015</h2>
+                            <div class="mt-2">
+                                <img src="img/mts.png" class="mb-3" width="60px" alt="mts">
+                                <h5 class="mb-0 nunito">Ma'arif Sukorejo Islamic Junior High School</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-2">
+                        <div data-aos="fade-left" class="w-100 bg-glass p-4">
+                            <div>
+                                <p class="mb-0 nunito">Year</p>
+                            </div>
+                            <h2 class="mb-0 font-weight-bold nunito">2018 - Now</h2>
+                            <div class="mt-2">
+                                <img src="img/smk.png" class="mb-3" width="60px" alt="mts">
+                                <h5 class="mb-0 nunito">01 Purwosari Industrial High School</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="container card-dark position-relative pt-5 px-5 pb-3" style="top: -50px;">
+            <div class="row">
+                <div class="col-md-12 px-0">
+                    <h3 class="nunito font-weight-bold">Current Skill</h3>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div data-aos="fade-right" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/html.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="html"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="50" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/css.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="css"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="100" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/js.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="js"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="150" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/vue.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="vue"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="200" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/laravel.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="laravel"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div data-aos="fade-right" data-aos-delay="200" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/bootstrap.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="bootstrap"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="250" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/php.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="php"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="300" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/flutter.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="flutter"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="350" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/java.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="java"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="400" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/kotlin.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="kotlin"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div data-aos="fade-right" data-aos-delay="400" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/firebase.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="firebase"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="450" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/django.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="django"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="500" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/mysql.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="mysql"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="550" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/sqlserver.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="sqlserver"></div>
+                                </div>
+                            </div>
+                            <div data-aos="fade-right" data-aos-delay="600" class="skill d-block py-3">
+                                <div class="icon d-inline-block">
+                                    <img src="img/icon/postsgre.png" class="10px" alt="Html">
+                                </div>
+                                <div class="size d-inline-block">
+                                    <div class="fill" id="postgre"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        AOS.init()
+    </script>
+
 </body>
 </html>
