--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         <div onclick='window.open("https://www.instagram.com/rhnalms_/", "_blank")' class="card-team position-relative">
                             <img src="img/team/rehan.png" class="object-fit" alt="Aku">
                             <div class="overlay-gradient-to-opacity-top"></div>
-                            <div class="position-absolute p-4" style="bottom: 0">
+                            <div class="position-absolute py-4 px-5" style="bottom: 0">
                                 <div>
                                     <h5 class="nunito mb-0 font-weight-bold">Reihan Almas Hediawan</h5>
                                 </div>
@@ -454,7 +454,7 @@
                         <div onclick='window.open("https://www.instagram.com/febribrilia/", "_blank")' class="card-team position-relative">
                             <img src="img/team/febri1.png" class="object-fit" alt="Aku">
                             <div class="overlay-gradient-to-opacity-top"></div>
-                            <div class="position-absolute p-4" style="bottom: 0">
+                            <div class="position-absolute py-4 px-5" style="bottom: 0">
                                 <div>
                                     <h5 class="nunito mb-0 font-weight-bold">Febri Brilian Barkah</h5>
                                 </div>
@@ -468,7 +468,7 @@
                         <div onclick='window.open("https://www.instagram.com/_.ilhamie/", "_blank")' class="card-team position-relative">
                             <img src="img/team/ilham.png" class="object-fit" alt="Aku">
                             <div class="overlay-gradient-to-opacity-top"></div>
-                            <div class="position-absolute p-4" style="bottom: 0">
+                            <div class="position-absolute py-4 px-5" style="bottom: 0">
                                 <div>
                                     <h5 class="nunito mb-0 font-weight-bold">Ilham Magfiro</h5>
                                 </div>
@@ -480,7 +480,7 @@
                         <div onclick='window.open("https://www.instagram.com/madamarsha/", "_blank")' class="card-team position-relative">
                             <img src="img/team/mada.png" class="object-fit" alt="Aku">
                             <div class="overlay-gradient-to-opacity-top"></div>
-                            <div class="position-absolute p-4" style="bottom: 0">
+                            <div class="position-absolute py-4 px-5" style="bottom: 0">
                                 <div>
                                     <h5 class="nunito mb-0 font-weight-bold">Ade Mada Marshanda</h5>
                                 </div>
@@ -492,7 +492,7 @@
                         <div onclick='window.open("https://www.instagram.com/fennekicy/", "_blank")' class="card-team position-relative">
                             <img src="img/team/deva.png" class="object-fit" alt="Aku">
                             <div class="overlay-gradient-to-opacity-top"></div>
-                            <div class="position-absolute p-4" style="bottom: 0">
+                            <div class="position-absolute py-4 px-5" style="bottom: 0">
                                 <div>
                                     <h5 class="nunito mb-0 font-weight-bold">Desvina Deva Lucya</h5>
                                 </div>
