Add and fixing data

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 py-md-4 py-0 px-4">
-                        <h3 data-aos="fade-left" class="nunito mb-4 mt-md-0 mt-4 font-weight-bold">introduce</h3>
+                        <h3 data-aos="fade-left" class="nunito mb-4 mt-md-0 mt-4 font-weight-bold">Introduction</h3>
                         <div data-aos="fade-left" class="mr-md-5 mr-3">
                             <p class="mb-0">My name is Khuluq, but people call me ‘Ninno’, I’am born in Pasuruan ,30 March 2020 and I’am third year software engineer in 01 Purwosari indutrial school, I’am fullstack developer, I can make web and app in any language programming, I’m love python and kotlin, It’s simplicity of programming.</p>
                         </div>
@@ -179,9 +179,9 @@
             <h4 data-aos="fade-down">Education</h4>
         </div>
         <div class="container py-3 pb-5 position-relative">
-            <div class="col-md-10 offset-md-1">
+            <div class="col-md-12">
                 <div class="row">
-                    <div class="col-md-4 mb-2">
+                    <div class="col-md-3 col-sm-6 mb-2">
                         <div data-aos="fade-right" class="w-100 bg-glass p-4">
                             <div>
                                 <p class="mb-0 nunito">Year</p>
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-2">
+                    <div class="col-md-3 col-sm-6 mb-2">
                         <div data-aos="fade-down" class="w-100 bg-glass p-4">
                             <div>
                                 <p class="mb-0 nunito">Year</p>
@@ -205,15 +205,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-2">
+                    <div class="col-md-3 col-sm-6 mb-2">
+                        <div data-aos="fade-up" class="w-100 bg-glass p-4">
+                            <div>
+                                <p class="mb-0 nunito">Year</p>
+                            </div>
+                            <h2 class="mb-0 font-weight-bold nunito">2018</h2>
+                            <div class="mt-2">
+                                <img src="img/smk.png" class="mb-3" width="60px" alt="mts">
+                                <h5 class="mb-0 nunito">01 Purwosari Industrial High School</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 mb-2">
                         <div data-aos="fade-left" class="w-100 bg-glass p-4">
                             <div>
                                 <p class="mb-0 nunito">Year</p>
                             </div>
-                            <h2 class="mb-0 font-weight-bold nunito">2018 - Now</h2>
+                            <h2 class="mb-0 font-weight-bold nunito">2021 - Now</h2>
                             <div class="mt-2">
-                                <img src="img/smk.png" class="mb-3" width="60px" alt="mts">
-                                <h5 class="mb-0 nunito">01 Purwosari Industrial High School</h5>
+                                <img src="img/pens.png" class="mb-3" width="60px" alt="mts">
+                                <h5 class="mb-0 nunito">Politeknik Elektronika Negeri Surabaya</h5>
                             </div>
                         </div>
                     </div>
@@ -366,9 +378,9 @@
             <div class="row">
                 <div class="col-md-4 py-md-5 py-2">
                     <div data-aos="fade-right">
-                        <h3 class="nunito mb-4 font-weight-bold">Achievement</h3>
+                        <h3 class="nunito mb-4 font-weight-bold">Achievements</h3>
                     </div>
-                    <p data-aos="fade-right" data-aos-delay="100" class="nunito">I've hard work and smart work to get these Achievement, We're just need a movement to got an achievement</p>
+                    <p data-aos="fade-right" data-aos-delay="100" class="nunito">I've hard work and smart work to get these achievements, I just need a movement to get more achievement</p>
                 </div>
                 <div class="col-md-8">
                     <div class="certificates" id="certificates" data-aos="fade-left">
@@ -537,7 +549,7 @@
                         </div>
                         <div onclick="moveContent('#introduce')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>introduce</h4>
+                                <h4>Introduction</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#experience')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
