--- a/index.html
+++ b/index.html
@@ -430,9 +430,16 @@
 
     <div class="container-fluid card-dark pt-4 px-0" id="team">
         <div class="container my-3">
-            <h3 class="nunito mb-2 font-weight-bold">SideScript Developer</h3>
-            <div>
-                <p class="nunito">Creative Team</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="nunito mb-2 font-weight-bold">SideScript Developer</h3>
+                    <div>
+                        <p class="nunito">Creative Team</p>
+                    </div>
+                </div>
+                <div class="col-md-6 text-right">
+                    <button class="btn btn-gradient-primary py-3 px-5" onclick="window.location.href = 'https://rpldevlaper.github.io/sidescript-frontend/'">About Us</button>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -544,37 +551,44 @@
                     <div class="row">
                         <div onclick="moveContent('#')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Home</h4>
+                                <h4 class="mb-0">Home</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#introduce')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Introduction</h4>
+                                <h4 class="mb-0">Introduction</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#experience')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Experiences</h4>
+                                <h4 class="mb-0">Experiences</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#education')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Educations</h4>
+                                <h4 class="mb-0">Educations</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#skill')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Skill</h4>
+                                <h4 class="mb-0">Skill</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#achievement')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Achievement</h4>
+                                <h4 class="mb-0">Achievement</h4>
                             </div>
                         </div>
                         <div onclick="moveContent('#team')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
                             <div class="bg-glass-white p-4">
-                                <h4>Teams</h4>
+                                <h4 class="mb-0">Teams</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div onclick="window.location.href = 'docs/cv.pdf'" class="col-lg-6 rounded-0 my-2 col-sm-6">
+                            <div class="bg-glass-white p-4">
+                                <h4 class="mb-0"><i class="fas fa-download"></i> Download My Resume</h4>
                             </div>
                         </div>
                     </div>
