--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div onclick="window.location.href = 'docs/cv.pdf'" class="col-lg-6 rounded-0 my-2 col-sm-6">
+                        <div onclick="window.location.href = 'docs/cv.pdf'" class="col-lg-6 rounded-0 my-2">
                             <div class="bg-glass-white p-4">
                                 <h4 class="mb-0"><i class="fas fa-download"></i> Download My Resume</h4>
                             </div>
