--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <h2 class="mb-0 font-weight-bold nunito">2018</h2>
                             <div class="mt-2">
                                 <img src="img/smk.png" class="mb-3" width="60px" alt="mts">
-                                <h5 class="mb-0 nunito">01 Purwosari Industrial High School</h5>
+                                <h5 class="mb-0 nunito">01 Purwosari Vocational High School</h5>
                             </div>
                         </div>
                     </div>
