--- a/index.html
+++ b/index.html
@@ -584,6 +584,11 @@
                                 <h4 class="mb-0">Teams</h4>
                             </div>
                         </div>
+                        <div onclick="moveContent('#team')" class="col-lg-3 col-md-4 rounded-0 my-2 col-sm-6">
+                            <div class="bg-glass-white p-4">
+                                <h4 class="mb-0">Teams</h4>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div onclick="window.location.href = 'docs/cv.pdf'" class="col-lg-6 rounded-0 my-2">
